infra/k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banterbus
spec:
  replicas: 3
  template:
    spec:
      nodeSelector: null
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - banterbus
                - key: component
                  operator: NotIn
                  values:
                  - migration
              topologyKey: kubernetes.io/hostname
      containers:
      - name: banterbus
        image: registry.gitlab.com/hmajid2301/banterbus:prod
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 1Gi
